<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ColorsSignalLightsStatus" Id="{f25956ff-a630-0e59-20a0-836c25ffd598}">
    <Declaration><![CDATA[TYPE
    ColorsSignalLightsStatus :
    STRUCT
        Blue     : BOOL;
        White    : BOOL;
        Violet   : BOOL;
        Turquise : BOOL;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>